fix tab corner visibility issues

--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -146,6 +146,8 @@
 
   --tab-separator-opacity: 0.35 !important;
   --tab-block-margin: var(--space-above-tabbar) !important;
+  --tab-top-radius: 8px;
+  --tab-bottom-radius: var(--tab-top-radius);
 
   --toolbar-field-background-color: hsl(200, 12%, 95%) !important;
   --toolbar-field-hover-background-color: hsl(216, 12%, 92%) !important;
