--- a/src/userChrome.au.scss
+++ b/src/userChrome.au.scss
@@ -19,3 +19,7 @@
   background-position: 4px 4px;
   background-repeat: no-repeat;
 }
+
+.tabbrowser-arrowscrollbox::part(scrollbox) {
+  padding-inline-start: var(--tab-bottom-radius);
+}
